--- a/styles/style.css
+++ b/styles/style.css
@@ -9,8 +9,10 @@ h1,h2,h3,h4{
       font-family: Roboto,sans-serif;
       font-weight: 700; }
  body,h1,h2,h3,h4,ul,li,p{
-        margin: 0px;    }     
+        margin: 0px;    } 
+
     /*Верхняя линия*/
+
 header{
        background-color: #ffffff; }
 .logo,
@@ -18,8 +20,7 @@ header{
        font-family: Raleway,sans-serif;
        font-weight: 700;
        font-size: 26px;
-       line-height: 30.52px;
-       }
+       line-height: 30.52px;      }
 .link{
        color: #212121; }
 .link:hover{
@@ -32,8 +33,7 @@ header{
        font-weight: 500;
        font-size: 14px;
        line-height: 16px;
-       letter-spacing: 0.02em;
-     }
+       letter-spacing: 0.02em;    }
 li{
        list-style: none; }
 a{
@@ -43,7 +43,9 @@ ul{
        margin-block-end: 0em;
        margin-block-start: 0em;
        padding: 0px;      }
+
 /*контакты*/
+
 .contacts{
        display: flex;
        align-items: center;
@@ -58,8 +60,10 @@ ul{
 .contacts:hover,
 .contacts:focus{
        color: #2196F3;
-       fill:#2196F3;    }       
+       fill:#2196F3;    }
+
     /*шапка*/
+
 .banner  {      
        background: #2F303A;  }      
 .heading{      
@@ -68,7 +72,9 @@ ul{
        line-height: 60px;
        color: #ffffff;
        letter-spacing: 0.06em;    }
+
   /*особенности*/
+
 .subject{
        font-weight: 700;
        font-size: 14px;
@@ -88,6 +94,7 @@ ul{
        line-height: 42px;
        letter-spacing: 0.03em;
        color: #212121;  }
+
   /*наша команда*/
   
 .caption{
@@ -141,6 +148,7 @@ ul{
        color: #2196F3; }
 .aside:focus{
         color: #2196F3; }
+
   /*кнопки*/
 
 .filter{
@@ -163,8 +171,10 @@ ul{
         background: #2196F3; }
 .filter:focus{
         color: #ffffff;
-        background: #2196F3; }       
+        background: #2196F3; }
+
   /*портфолио*/
+
 .content{
         background: #FFFFFF;
         border: 1px solid #EEEEEE;
@@ -180,10 +190,14 @@ ul{
         font-size: 16px;
         line-height: 30px;
         letter-spacing: 0.03em;
-        color: #757575;  } 
+        color: #757575;  }
+
  /********* goit-markup-hw-03 ********/
+
 /***** главная ****/
+
         /* Верхняя линия */
+
 .link
 .logo
 .contacts
@@ -223,6 +237,7 @@ ul{
        margin-right: -50px;  }
 .contacts:last-child{
        margin-right: 50px;  }
+
 /* Шапка */
 
 .helmet{ 
@@ -263,7 +278,9 @@ ul{
        margin-left: auto;
        margin-right: auto;  
        color: #FFFFFF;  } 
+
 /* Особенности */
+
 .visually-hidden {
        position: absolute;
        clip: rect(0 0 0 0);
@@ -298,7 +315,9 @@ ul{
        height: 75px;
        padding-top: 10px;
        font-family: Roboto;   }
+
 /* чем мы занимаемся */
+
 .subtitle{ 
        width: 400px;
        display: flex;
@@ -316,7 +335,9 @@ ul{
        justify-content: space-between;         }
 .thumb{
        padding-left: 0;  }
+
 /* Наша команда */
+
 .commercial{     
        background: #F5F4FA;
        padding-bottom: 94px;
@@ -377,6 +398,7 @@ ul{
        margin-right: auto;    
        text-align: center;
        color: #212121;     }
+
 /* подвал */
 .adv{
        display: flex;
@@ -407,14 +429,15 @@ ul{
        font-size: 26px;
        line-height: 31px;
        letter-spacing: 0.03em;   }
+
 /* ***портфолио*** */
 
 /* кнопка */
+
 .border{
        background: #ffffff;
        border: 1px solid #EEEEEE;
-       box-sizing: border-box;
-}
+       box-sizing: border-box;       }
 .content-Macbook,
 .content-ball,
 .content-ears,
@@ -458,8 +481,11 @@ ul{
          padding:20px 24px;  } 
 .stud{
          margin: 0px 8px;        } 
-       /* goit-markup-hw-04    */ 
+
+       /* **  goit-markup-hw-04   ** */ 
+
        /* <!--Особенности-->  */
+
 .border:hover,
 .border:focus{
          filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));  }
@@ -481,30 +507,28 @@ ul{
 .vektor-astronaut{           
          background-image: url(../svg/astronaut\ 1.svg);    } 
           /* верхняя линия */
-.link-mailto{      
-         fill: #757575;
-         margin-right: 10px;   }
-.link-mailto:hover,
-.link-mailto:focus{
-         fill: currentColor         }                
-.link-tel{
-         fill: #757575;
+
+.contacts{
+                 fill: #757575;         }
+.link-mailto ,.link-tel{      
          margin-right: 10px;     }
-.link-tel:hover,
-.link-tel:focus{
-         fill:currentColor          }         
+.menu-nav-contacts .contacts:hover,
+.menu-nav-contacts .contacts:focus{
+         color: var(--accent-color);           }         
 .email{
          display: flex;
          align-items: center;        }
 .phone{
          display: flex;
          align-items: center;        }
+
          /* наша команда */
+
 .social-are,
 .footer-social-are{
           width: auto;
           height: auto;
-          padding-right: 21px;
+          padding-right: 0px;
           padding-left: 0px;
           padding-top: 20px;
           margin: 0px auto;
@@ -514,20 +538,20 @@ ul{
 .link-instagram,.link-twitter,
 .link-facebook,.link-linkedin{     
           border: 0px;
-          padding: 0px;
-                 }
+          padding: 0px;           }
 .instagram,
 .twitter,
 .facebook,
 .linkedin:not(:last-child){
-      margin-right: 10px; }
+         margin-right: 10px; }
 .instagram,.twitter,.facebook,.linkedin{
          display: flex;
          align-items: center;
          justify-content: center;
          border-radius: 50%;
          width: 44px;
-         height: 44px;   
+         height: 44px;
+         background: rgba(255, 255, 255, 0.1);   
          fill: #AFB1B8;     }
 .instagram:hover,
 .instagram:focus{
@@ -557,12 +581,14 @@ ul{
 .linkedin:hover,
 .linkedin:focus{
        background:  #2196F3;   }
+
       /* клиент  */
+
 .client{
       display: flex;
       align-items: center;
-      justify-content: center;    } 
-.link-client{
+      justify-content: center;         } 
+.link-client{ 
        display: flex;
        align-items: center;
        justify-content: center;
@@ -570,13 +596,14 @@ ul{
        height: 90px;
        border: 1px solid #AFB1B8;
        box-sizing: border-box;
-       border-radius: 4px;}
+       border-radius: 4px;
+       fill: #AFB1B8;      }
 .figure{
-           width: 1200px;
-           height: auto;
-           margin: 0px auto;
-           padding-bottom: 97px;    } 
-.link-client:not(:last-child){
+       width: 1200px;
+       height: auto;
+       margin: 0px auto;
+       padding-bottom: 97px;    } 
+.indent:not(:last-child){
        margin-right: 30px;   }
 .figure-client{
        font-family: Roboto;
@@ -590,33 +617,22 @@ ul{
        height: auto;
        padding-top: 94px;
        padding-bottom: 50px;
-       color: #212121;   }
+       text-decoration-color: #212121;   }
 .link-client:hover,
-.link-client:focus{
-       border: 1px solid #2196F3;
-        background-color: var(--accent-color);
-} 
-.icon-logo{
-      fill: #AFB1B8;; 
-}    
-.icon-logo:hover,
-.icon-logo:focus{
-     fill: #2196F3;
-     background-color: var(--accent-color);
-} 
-} 
-.icon-logo{
-       fill: #AFB1B8;;
-}   
+.link-client:focus{ 
+       color: var(--accent-color); 
+       border-color: 1px solid var(--accent-color);
+       fill: var(--accent-color);  }
+:root {
+       --accent-color: #2196F3;     }
+  
+    /* подвал */
 
-
-
- /* подвал */
- .basement {
-      width: 231px;
-      height: 81px;
-      display: flex;
-      align-items: center;     }
+.basement {
+       width: 231px;
+       height: 81px;
+       display: flex;
+       align-items: center;     }
 .accession{
        font-family: Roboto;
        font-style: normal;
@@ -632,10 +648,9 @@ ul{
        width: 206px;
        height: auto;
        margin-left: 70px;
-       padding-bottom: 20px;
-       }
+       padding-bottom: 20px;      }
 .adv > .container{
        display: flex;
-       align-items: center;
-       }
+       align-items: center;       }
+
                  
